@@ -1,28 +1,29 @@
 package test.Service;
 
 import org.example.socialnetwork.DTO.FriendDTO;
-import org.example.socialnetwork.DTO.PostDTO;
 import org.example.socialnetwork.DTO.UserDTO;
 import org.example.socialnetwork.Model.Friend;
-import org.example.socialnetwork.Model.Post;
 import org.example.socialnetwork.Model.User;
 import org.example.socialnetwork.Repository.FriendRepository;
 import org.example.socialnetwork.Service.FriendService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.ArrayList;
+import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
-
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
+@ExtendWith(MockitoExtension.class)
 public class FriendServiceTest {
     @InjectMocks
     private FriendService friendService;
@@ -30,75 +31,78 @@ public class FriendServiceTest {
     @Mock
     private FriendRepository friendRepository;
 
+    private UserDTO user;
+    private UserDTO friend;
+    private FriendDTO friendDTO;
+    private Friend existingFriendship;
+
     @BeforeEach
     public void setUp() {
-        MockitoAnnotations.openMocks(this);
+        user = new UserDTO();
+        user.setUserId(1L);
+        user.setUserName("user1");
+
+        friend = new UserDTO();
+        friend.setUserId(2L);
+        friend.setUserName("user2");
+
+        friendDTO = new FriendDTO();
+        friendDTO.setFriend_id(1L);
+        friendDTO.setUser(convertToEntity(user));
+        friendDTO.setFriend(convertToEntity(friend));
+        friendDTO.setCreated_at(LocalDateTime.now());
+
+        existingFriendship = new Friend();
+        existingFriendship.setFriend_id(1L);
+        existingFriendship.setUser(convertToEntity(user));
+        existingFriendship.setFriend(convertToEntity(friend));
+        existingFriendship.setCreated_at(LocalDateTime.now());
     }
 
     @Test
-    public void testAddFriend() {
-        UserDTO user = new UserDTO();
-        UserDTO friend = new UserDTO();
-
-        when(friendRepository.findByUserAndFriend(convertToEntity(user), convertToEntity(friend))).thenReturn(null);
+    public void testAddFriend_ShouldAddFriendship() {
+        when(friendRepository.findByUserAndFriend(any(), any())).thenReturn(null);
         friendService.addFriend(user, friend);
         verify(friendRepository, times(2)).save(any(Friend.class));
     }
 
     @Test
-    public void testAddFriend_AlreadyFriends() {
-        UserDTO user = new UserDTO();
-        UserDTO friend = new UserDTO();
-        FriendDTO existingFriendship = new FriendDTO();
-        when(friendRepository.findByUserAndFriend(convertToEntity(user), convertToEntity(friend))).thenReturn(convertToEntity(existingFriendship));
-
+    public void testAddFriend_AlreadyFriends_ShouldThrowException() {
+        when(friendRepository.findByUserAndFriend(any(), any())).thenReturn(existingFriendship);
         RuntimeException exception = assertThrows(RuntimeException.class, () -> {
             friendService.addFriend(user, friend);
         });
-
         assertEquals("Уже в друзьях", exception.getMessage());
     }
 
     @Test
-    public void testGetFriends() {
-        User user = new User();
-        user.setUserId(1L);
-
-        Friend friendEntity1 = new Friend();
-        friendEntity1.setFriend_id(1L);
-
-        User friendUser1 = new User();
-        friendUser1.setUserId(2L);
-        friendEntity1.setFriend(friendUser1);
-
-        Friend friendEntity2 = new Friend();
-        friendEntity2.setFriend_id(2L);
-
-        User friendUser2 = new User();
-        friendUser2.setUserId(3L);
-        friendEntity2.setFriend(friendUser2);
-
-        List<Friend> friends = List.of(friendEntity1, friendEntity2);
-        when(friendRepository.findByUser(user)).thenReturn(friends);
-        List<FriendDTO> expectedFriends = friends.stream()
-                .map(friend -> {
-                    FriendDTO friendDTO = new FriendDTO();
-                    friendDTO.setFriend_id(friend.getFriend_id());
-                    friendDTO.setFriend_id(friend.getFriend().getUserId());
-                    return friendDTO;
-                })
-                .collect(Collectors.toList());
-        List<FriendDTO> result = friendService.getFriends(convertToDTO(user));
-        assertEquals(expectedFriends, result);
+    public void testGetFriends_ShouldReturnListOfFriends() {
+        when(friendRepository.findByUser(any())).thenReturn(Arrays.asList(existingFriendship));
+        List<FriendDTO> friends = friendService.getFriends(user);
+        assertNotNull(friends);
+        assertEquals(1, friends.size());
+        assertEquals(friendDTO.getFriend_id(), friends.get(0).getFriend_id());
     }
 
     @Test
-    public void testDeleteFriend() {
-        FriendDTO friend = new FriendDTO();
-        when(friendRepository.findById(friend.getFriend_id())).thenReturn(Optional.of(convertToEntity(friend)));
-        friendService.deleteFriend(friend);
-        verify(friendRepository).delete(convertToEntity(friend));
+    public void testDeleteFriend_ShouldCallDeleteOnFriendRepository() {
+        when(friendRepository.findByUserAndFriend(any(), any())).thenReturn(existingFriendship); // это может быть ненужным
+
+        // Act
+        friendService.deleteFriend(friendDTO);
+
+        // Assert
+        verify(friendRepository).delete(any(Friend.class));
     }
+
+    @Test
+    public void testDeleteFriend_NullFriend_ShouldNotThrowException() {
+        assertDoesNotThrow(() -> {
+            friendService.deleteFriend(null);
+        });
+        verify(friendRepository, never()).delete(any());
+    }
+
     private User convertToEntity(UserDTO userDTO) {
         if (userDTO == null) {
             return null;
@@ -108,39 +112,11 @@ public class FriendServiceTest {
         user.setUserName(userDTO.getUserName());
         user.setFirstName(userDTO.getFirstName());
         user.setLastName(userDTO.getLastName());
+        user.setPassword(userDTO.getPassword());
         user.setEmail(userDTO.getEmail());
         user.setBirthdate(userDTO.getBirthdate());
         user.setProfilePicture(userDTO.getProfilePicture());
         user.setRole(userDTO.getRole());
         return user;
-    }
-
-    private Friend convertToEntity(FriendDTO friendDTO) {
-        if (friendDTO == null) {
-            return null;
-        }
-        Friend friend = new Friend();
-        friend.setFriend_id(friendDTO.getFriend_id());
-        friend.setUser(friendDTO.getUser());
-        friend.setFriend(friendDTO.getFriend());
-        friend.setCreated_at(friendDTO.getCreated_at());
-        return friend;
-    }
-
-    private UserDTO convertToDTO(User user) {
-        if (user == null) {
-            return null;
-        }
-        UserDTO userDTO = new UserDTO();
-        userDTO.setUserId(user.getUserId());
-        userDTO.setUserName(user.getUserName());
-        userDTO.setFirstName(user.getFirstName());
-        userDTO.setLastName(user.getLastName());
-        userDTO.setPassword(user.getPassword());
-        userDTO.setEmail(user.getEmail());
-        userDTO.setBirthdate(user.getBirthdate());
-        userDTO.setProfilePicture(user.getProfilePicture());
-        userDTO.setRole(user.getRole());
-        return userDTO;
     }
 }
